# MM_MB_1_v1_X-FW

./: .gitignore  .gitmodules  .mxproject  .project  CLAUDE.md  CMakeLists.txt  LS_MB_1_v1_0-FW.ioc  Makefile  README.md  flash.gdb  reset_board.gdb  startup_stm32wl5mxx_cm4.s
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
Core/Inc/: adc.h  app_accel.h  app_communication.h  app_eeprom.h  app_errors.h  app_settings.h  b_wl5m_subg_conf.h  dma.h  gpio.h  i2c.h  main.h  platform.h  rtc.h  shutdown_handler.h  subghz.h  sys_app.h  usart.h  utilities_def.h  utils.h
Core/Src/: adc.c  app_accel.c  app_communication.c  app_eeprom.c  app_errors.c  app_settings.c  gpio.c  i2c.c  main.c  rtc.c  stm32_lpm_if.c  stm32wlxx_hal_msp.c  stm32wlxx_it.c  subghz.c  sys_app copy.c  sys_app.c  sys_sensors.c  timer_if.c  usart.c  usart_if.c  utils.c
Drivers/Lynkz_Library/: .gitmodules  CMakeLists.txt  Kconfig  README.md
Drivers/Lynkz_Library/.github/: pull_request_template.md
Drivers/Lynkz_Library/drivers/: CMakeLists.txt  Kconfig.defconfig
Drivers/Lynkz_Library/drivers/BMA400/: bma400_api.c  bma400_api.h
Drivers/Lynkz_Library/drivers/BMA400/BMA400_SensorAPI/: README.md
Drivers/Lynkz_Library/drivers/cat24c32_api/: cat24c32_api.c  cat24c32_api.h
Drivers/Lynkz_Library/drivers/lr1110/Lora-net-SWL2001/lbm_applications/1_thread_x_on_stm32_u5/main_examples/: app_azure_rtos.c  app_threadx.c  app_threadx.h  tx_user.h
Drivers/Lynkz_Library/drivers/lr1110/Lora-net-SWL2001/lbm_applications/1_thread_x_on_stm32_u5/mcu_drivers/STM32U5xx_HAL_Driver/Src/: stm32u5xx_hal_timebase_tim.c
Drivers/Lynkz_Library/drivers/lr1110/Lora-net-SWL2001/lbm_applications/1_thread_x_on_stm32_u5/smtc_hal_u5/threadx/common/src/: tx_initialize_kernel_enter.c
Drivers/Lynkz_Library/drivers/lr1110/Lora-net-SWL2001/lbm_applications/2_porting_nrf_52840/app_makefiles/: board_nrf52840.mk
Drivers/Lynkz_Library/drivers/lr1110/Lora-net-SWL2001/lbm_applications/2_porting_nrf_52840/mcu_drivers/nRF5_SDK_17.1.0_ddde560_Driver/integration/nrfx/legacy/: nrf_drv_clock.c
Drivers/Lynkz_Library/drivers/lr1110/Lora-net-SWL2001/lbm_applications/2_porting_nrf_52840/smtc_hal_nrf52840/: generic_gcc_nrf52.ld  sdk_config.h
Drivers/Lynkz_Library/drivers/lr1110/Lora-net-SWL2001/lbm_examples/hw_modem/: hw_modem.h
Drivers/Lynkz_Library/drivers/nPM2100/: nPM2100.c  nPM2100.h
Drivers/Lynkz_Library/drivers/nPM2100/hal/: i2c_stm32.c  i2c_stm32.h
Drivers/Lynkz_Library/drivers/nPM2100/npm2100-bm/src/: adc_npm2100.c
Drivers/Lynkz_Library/drivers/stm32_uart/: stm32_uart.c  stm32_uart.h
Drivers/Lynkz_Library/drivers/stm32wl_utils/: stm32wl_utils.c  stm32wl_utils.h
Drivers/Lynkz_Library/micropython/modules/cxxr-Livestats/livestats/: livestats.py
Drivers/Lynkz_Library/micropython/modules/micropython-eeprom/docs/: CONTRIBUTING.md  DOCUMENTATION.md  EXAMPLES.md  conf.py  eeprom.rst  index.rst  readme_link.rst
Drivers/Lynkz_Library/tools/FastHamming/: fast_hamming.c  fast_hamming.h  hamming_testing.h
Drivers/Lynkz_Library/tools/librs/: README.md
Drivers/Lynkz_Library/tools/minmea/: minmea.c  minmea.h
Drivers/Lynkz_Library/utils/: CMakeLists.txt  lynkz_crypto.c  lynkz_crypto.h  lynkz_gcc_utils.h  lynkz_kdf.c  lynkz_utils.c  lynkz_utils.h  nrf5_utils.c  nrf5_utils.h
LoRaWAN/App/: app_lorawan.c  lora_app.c  lora_app.h  se-identity.h
Utilities/trace/adv_trace/: stm32_adv_trace_if_template.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
